<resources>
    <string name = "app_name">My Application</string>
    <string name = "action_settings">Settings</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login!</string>
    <string name="text_not_user">Sign Up!</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_height">Height (inches)</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_is_user">Back to Login!</string>
    <string name="error_message">Please Fill Out All Fields</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Registered</string>
    <string name="error_invalid_login">User Email Or Password is incorrect</string>
    <string name="create_therapy">Add New Therapy</string>
    <string name="text_therapy_history">Session History</string>
    <string name="logout">Logout</string>
    <string name="hint_therapist">Therapist</string>
    <string name="hint_sd">Session Duration</string>
    <string name="hint_spd">Sessions Per Day</string>
    <string name="hint_dpw">Days Per Week</string>
    <string name="hint_ts">Total Weeks</string>
    <string name="hint_tw">Total Weeks</string>
    <string name="add_therapy">Add Therapy</string>
    <string name="unmatched_pass">Passwords Do Not Match</string>
    <string name="back_to_profile">Return to your Profile Page!</string>
    <string name="success_therapy_message">Therapy Created Successfully</string>
    <string name="text_start_session">Start Session</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_password">Please Enter Your Password to Confirm These Changes</string>
    <string name="error_update_patient">Failed to update patient profile: Please try again!</string>
    <string name="text_save_changes">Save Changes</string>
    <string name="prof_to_pat">Return to your Profile Page!</string>
    <string name="change_exercise">Select Exercise</string>
    <string name="confirm_exercise">Confirm</string>
    <string name="update_success">Changes Saved Successfully</string>
    <string name="update_picture">Update Profile Picture</string>
    <string name="success_pic">Profile picture saved successfully!</string>
    <string name="fail_pic">Failed to save picture; Please try again!</string>
    <string name="text_start">Start Therapy</string>
    <string name="text_end">End Therapy</string>
    <string name="session_details">Session Details:</string>
    <string name="form_failures">Form Failures:</string>
    <string name="failed_find_bt">No BT adapter available</string>
    <string name="success_find_bt">Bluetooth Device Found</string>
    <string name="open_bt">Bluetooth Opened</string>
    <string name="hint_age">Age</string>
    <string name="close_bt">BT Connection Closed</string>
    <string name="select_exercise_first">You must select an exercise before you can start a session!</string>
    <string name="first_create_therapy">You must add therapy before you can select an exercise!</string>
    <string name="must_complete_session">You must complete a Session before you can view your Session History!</string>
    <string-array name = "exercises">
        <item>Vertical Arm Extension</item>
        <item>Horizontal Arm Extension</item>
    </string-array>
</resources>
