<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/nestedScrollViewP"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/defaultprofilepic"
                android:layout_centerHorizontal="true"
                android:elevation = "1dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:contentPaddingTop="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingBottom="15dp"
                        app:contentPaddingLeft="15dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="60dp"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textViewEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp"
                                android:textSize="17sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textViewTherapist"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />

                                    <TextView
                                        android:id="@+id/textViewSD"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />

                                    <TextView
                                        android:id="@+id/textViewDPW"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textViewExercise"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />

                                    <TextView
                                        android:id="@+id/textViewSPD"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />

                                    <TextView
                                        android:id="@+id/textViewTW"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center_horizontal"
                                        android:textSize="13sp" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>


                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appCompatButtonChangeExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/change_exercise"
                        android:textColor="@color/colorText"></android.support.v7.widget.AppCompatButton>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appCompatButtonStartSession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/text_start_session"
                        android:textColor="@color/colorText"></android.support.v7.widget.AppCompatButton>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appCompatButtonTherapyHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorActivated"
                        android:text="@string/text_therapy_history"
                        android:textColor="@color/colorText"></android.support.v7.widget.AppCompatButton>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/textViewLinkCreateTherapy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:text="@string/create_therapy"
                            android:textColor="@color/colorActivated"></android.support.v7.widget.AppCompatTextView>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/textViewLinkEditProfile"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/edit_profile"
                            android:textColor="@color/colorActivated"></android.support.v7.widget.AppCompatTextView>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/textViewLinkLogout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:text="@string/logout"
                            android:textColor="@color/colorActivated"></android.support.v7.widget.AppCompatTextView>

                    </android.support.v7.widget.LinearLayoutCompat>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>